--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,6 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
-#SQLITE3
-.db
-
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -105,3 +102,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+#SQLite
+sqlite.db
