--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
+    "prettier": "^2.6.2",
     "sqlite3": "^5.0.6",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
