--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node index.js",
-    "build": "node index.js",
+    "build": "npm install && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
