--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "source/server.ts",
   "scripts": {
     "dev": "nodemon source/server.ts",
-    "start": "node server",
-    "build": "rm -rf build/ && prettier --write source/ && tsc && cd client && npm install"
+    "start": "nodemon source/server.ts",
+    "build": "npm install && cd client && npm install"
   },
   "repository": {
     "type": "git",
