--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js",
-    "build": "npm install && node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "build": "npm install && node index.js"
   },
   "keywords": [],
   "author": "",
